// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`variable variable-docs.ts 1`] = `
Object {
  exported: Array [],
  nodes: Array [
    VariableParseResult {
      defaultExported: false,
      documentation: Represents value of \`FOO\`.,
      documentationTags: Array [],
      exported: true,
      id: FOO,
      type: "foo",
    },
  ],
}
`;

exports[`variable variable-type.ts 1`] = `
Object {
  exported: Array [],
  nodes: Array [
    VariableParseResult {
      defaultExported: false,
      documentation: ,
      documentationTags: Array [],
      exported: true,
      id: FOO,
      type: 1,
    },
    VariableParseResult {
      defaultExported: false,
      documentation: ,
      documentationTags: Array [],
      exported: true,
      id: BAR,
      type: number,
    },
    VariableParseResult {
      defaultExported: false,
      documentation: ,
      documentationTags: Array [],
      exported: true,
      id: BAZ,
      type: "baz",
    },
    VariableParseResult {
      defaultExported: false,
      documentation: ,
      documentationTags: Array [],
      exported: true,
      id: QUOZ,
      type: string,
    },
  ],
}
`;
